# obs-remote

./: pyproject.toml
obs_remote/: client.py  main.py
