[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "obs-remote"
version = "0.1.0"
description = ""
authors = [ "Aria Taylor <ari@aricodes.net>",]
readme = "README.md"
[[tool.poetry.packages]]
include = "obs_remote"

[tool.black]
line-length = 95
target-version = [ "py39",]

[tool.poetry.dependencies]
python = "^3.10"
obsws-python = "^1.1.0"
toml = "^0.10.2"
